fix behaviour on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
     font-family: Average;
     src: url(../fonts/Average-Regular.ttf);
 }
-  
+
 @font-face {
 font-family: Fjalla One;
 src: url(../fonts/FjallaOne-Regular.ttf);
@@ -13,15 +13,15 @@ html {
     min-height: 100%;
 }
 
-  
+
 body {
     background-color: #080010;
 
-    font-size: 35px; 
-    font-family: Average; 
+    font-size: 35px;
+    font-family: Average;
     cursor: url(http://www.rw-designer.com/cursor-extern.php?id=101112);
     margin: 0;
-}   
+}
 
 footer {
     min-height: 10%;
@@ -44,17 +44,17 @@ ul li {
 
 #content > div {
     margin-bottom: 110px;
+    flex-wrap: wrap;
 }
 
 #gallery-content {
     margin-top: 66px;
     width: 100%;
-    height: 300px;
     position: relative;
 }
 
 #gallery-content > img {
-    height: 178%;
+    height: 65vh;
     position: absolute;
     margin-top: -66px;
     right: 0%;
@@ -62,13 +62,32 @@ ul li {
 }
 
 .gallery {
-    width: 92%;
+    width: 95%;
     height: 100%;
     opacity:.8;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: black;
+    padding-right: 10%;
+}
+
+.corte{
+    width: 25%;
+    height: 50%;
+    min-width: 200px;
+    overflow:hidden;
+    float: left;
+    display: flex;
+    justify-content: center;
+}
+.corte img{
+    width: 100%;
 }
 
 #tablet {
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
 }
 
 #sticker {
@@ -87,6 +106,7 @@ ul li {
     display: flex;
     align-items: end;
     margin-bottom: 0 !important;
+    justify-content: space-between;
 }
 
 #funciona h2 {
@@ -94,14 +114,24 @@ ul li {
     font-size: 69px;
     margin-bottom: -3px;
     margin-left: 10px;
+}
 
+#funciona > div {
+    width: 50%;
 }
 
 #funciona > img {
-    width: 500px;
+    max-width: 500px;
+    width: 50%;
     height: auto;
     align-self: flex-end;
-    
+}
+
+@media (max-width: 770px) {
+    #funciona > div, #funciona > img {
+        width: 100%;
+        padding: 0 10px;
+    }
 }
 
 #cart {
@@ -141,16 +171,16 @@ ul li {
     margin-bottom: 50px;
 }
 
-
-
 #footer {
     height: 40px;
     border-top: 3px solid #412f3a;
     width: 100%;
-
 }
 
 #credito {
     margin-left:20%;
+}
 
+.text-right {
+    text-align: left;
 }
